# MatCore_R2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  clean.bat  cpp.hint  premake5.lua
Editor/: AssetsBrowserPanel.cpp  AssetsBrowserPanel.h  CMakeLists.txt  Editor.cpp  Editor.h  EditorCamera.cpp  EditorCamera.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  Utils.h  imgui.ini  premake5.lua
Editor/Dependece/ImGUI/: CMakeLists.txt  premake5.lua
Editor/Resources/Shaders/: Screen.vs  default.fs  default.vs
MatCore_R2/: CMakeLists.txt  premake5.lua
MatCore_R2/Dependece/assimp/dynamicDebug/: assimp-vc142-mtd.exp
MatCore_R2/Dependece/glad/: premake5.lua
MatCore_R2/Dependece/glad/include/glad/: glad.h
MatCore_R2/Dependece/glad/src/: glad.c
MatCore_R2/Dependece/imgui/: imgui_impl_opengl3.cpp
MatCore_R2/Dependece/stb_image/: premake5.lua
MatCore_R2/headers/: Application.h  Bindable.h  Camera.h  CameraComponent.h  Entity.h  Factory.h  GLFWWindow.h  InheritanceComponent.h  Input.h  KeyCodes.h  LightComponents.h  LightRenderer.h  Log.h  MatCore.h  Material.h  Mesh.h  MeshComponent.h  MeshRenderer.h  Model.h  MouseButtonCodes.h  NativeScriptComponent.h  PlatformUtils.h  Renderer.h  Resource.h  Scene.h  SceneRenderer.h  SceneSerializer.h  ScriptableEntity.h  Shader.h  ShaderLibrary.h  TagComponent.h  Texture.h  Transform.h  TransformSystem.h  pch.h
MatCore_R2/headers/Cameras/: Camera.h  SceneCamera.h
MatCore_R2/headers/Events/: ApplicationEvents.h  Event.h  KeyboardEvents.h  MouseEvents.h
MatCore_R2/headers/OpenGL/: Factory.h  FrameBuffer.h  GPUResource.h  MeshBuffer.h  OpenGLRenderAPI.h  Resource.h  Shader.h  ShaderLoader.h  ShaderProgram.h  StaticRenderer.h  TextureBuffer.h  UniformBuffer.h
MatCore_R2/headers/Platform/Windows/: WindowsInput.h
MatCore_R2/source/: Application.cpp  Camera.cpp  Entity.cpp  Factory.cpp  LightRenderer.cpp  Log.cpp  MatCore_R2.cpp  Material.cpp  MeshBuffer.cpp  MeshComponent.cpp  Model.cpp  Renderer.cpp  Scene.cpp  SceneRenderer.cpp  SceneSerializer.cpp  ShaderLibrary.cpp  Texture.cpp  Transform.cpp  TransformSystem.cpp
MatCore_R2/source/Cameras/: SceneCamera.cpp
MatCore_R2/source/OpenGL/: FrameBuffer.cpp  MeshBuffer.cpp  Shader.cpp  ShaderLoader.cpp  ShaderProgram.cpp  StaticRenderer.cpp  TextureBuffer.cpp  UniformBuffer.cpp
MatCore_R2/source/Platform/Windows/: PlatformUtils.cpp  WindowsInput.cpp
Sandbox/: CMakeLists.txt  Sandbox.cpp  premake5.lua
Sandbox/Resources/Shaders/: Screen.fs  default.fs  default.vs
